# monad

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  publish-npm.yml
cli/: Cargo.toml
cli/src/: host.rs  main.rs  mcp.rs
console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/scripts/: validate.mjs
console/src/: boot.ts  kernel.ts  main.ts  memory.ts  state.ts  style.css  vite-env.d.ts
console/src/terminal/: InputHandler.ts  Screen.ts  TTY.ts
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: vault-schema.md
firmware/: Cargo.toml
firmware/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/src/: host.rs  lib.rs  query.rs  vault.rs
kernel/src/commands/: contact.rs  filesystem.rs  meta.rs  mod.rs  profile.rs  system.rs
kernel/src/os/: dmesg.rs  filesystem.rs  mod.rs  process_table.rs  session.rs
kernel/src/terminal/: ansi.rs  mod.rs  table.rs
lib/: Cargo.toml
lib/src/: lib.rs
npm/: card.js  package.json
scripts/: build.sh  dev.sh  doctor.sh  setup.sh  validate.sh
vault/: profile.json  schema.json
