[package]
name = "monad-kernel"
version = "0.1.0"
edition = "2021"
description = "MONAD — the pure, host-agnostic identity kernel. All logic lives here."
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"

[build-dependencies]
sha2 = "0.10"
